// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.github.help"
    id="name.github"
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmDefinitionFormField
    help={
      <React.Fragment>
        settings.pr_decoration.form.url.github.help1
        <br />
        <em>
          https://github.company.com/api/v3
        </em>
        <br />
        <br />
        settings.pr_decoration.form.url.github.help2
        <br />
        <em>
          https://api.github.com/
        </em>
      </React.Fragment>
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmDefinitionFormField
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value=""
  />
  <AlmDefinitionFormField
    id="private_key"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="privateKey"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.github.help"
    id="name.github"
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmDefinitionFormField
    help={
      <React.Fragment>
        settings.pr_decoration.form.url.github.help1
        <br />
        <em>
          https://github.company.com/api/v3
        </em>
        <br />
        <br />
        settings.pr_decoration.form.url.github.help2
        <br />
        <em>
          https://api.github.com/
        </em>
      </React.Fragment>
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value="http://github.enterprise.com"
  />
  <AlmDefinitionFormField
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value="123456"
  />
  <AlmDefinitionFormField
    id="private_key"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="privateKey"
    value="asdf1234"
  />
</Fragment>
`;
